# semantic-patterns

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  environment_py39.yaml  full_requirements.txt  old_requirements.txt  pyproject.toml  requirements.txt  semantic-patterns.code-workspace  setup.cfg
.github/workflows/: ci.yml
data/metadata/: ai_keywords.txt  company_list_50.csv  company_lookup.csv  company_lookup_backup.csv  company_mapping_gaps.csv  patent_keywords.txt  sample_filings_200.csv  source_windows.json
director/: README.md
director/config/: api_assistive_policy.yaml  autonomy_policy.yaml  cost_policy.yaml  project_profile.yaml  tooling_policy.yaml
director/model/: remediation_library.yaml  roadmap_model.yaml
director/reviews/: iteration_1_approval.json  iteration_1_branch_plan.md  iteration_1_patch_apply.json  iteration_1_patch_proposal.yaml  iteration_1_review.json  iteration_1_review.md  iteration_1_starter_prompt.md  iteration_2_kickoff.json  phase_iteration1_rubric-and-api-bootstrap_patch_proposal.yaml  phase_iteration1_rubric-and-api-bootstrap_review.json  phase_iteration1_rubric-and-api-bootstrap_review.md  phase_iteration1_rubric-and-api-bootstrap_starter_prompt.md
director/snapshots/: iteration_state.json  protocol_summary.json  roadmap_summary.json  script_inventory.json
docs/: codex_<package_name>_plan.md  iteration_log.md  labeling_protocol.md  mkdocs.yml  pipeline_map.md
docs/codex_plan/: stage_0.md
docs/director/: branching_policy.md  continuous_planning.md  data_architecture_target.md  implementation_protocol_master.md  policy.md  quickstart.md  review_workflow.md  roadmap_master.md  roadmap_model_spec.md  script_registry.md  stakeholder_expectations.md  tooling_isolation.md
docs/docs/: index.md
notebooks/debug/: inspect_patent_and_abstract.ipynb  inspect_patent_and_abstract_v2.ipynb  inspect_patentsview_assignee.ipynb
reports/: controls_qc.md  merge_qc.md  panel_clean_qc.md  report-2025-08-26-classifier-upgrade.md.md
scripts/: atlas_isolated.sh
semantic_patterns/: __init__.py  dataset.py  features.py  plots.py
src/: config.py  dataset.py  features.py  run_pipeline.py
tests/: test_aggregation_counts.py  test_api_assistive_bootstrap.py  test_director_cli.py  test_director_core.py  test_director_review.py  test_director_roadmap_model.py  test_director_script_inventory.py  test_director_sensors.py  test_director_tooling_policy.py  test_director_validation_assets.py  test_extraction.py  test_irr_phase2.py  test_iteration2_parallel.py  test_labeling_batch.py  test_labeling_phase1.py  test_phase0_diagnostics.py  test_sentence_table_pilot.py  test_source_index_contract.py
(+215 files in other folders)
