[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]
extend-exclude = [
    "src/aggregation",
    "src/analysis",
    "src/classification",
    "src/config",
    "src/core",
    "src/data",
    "src/modeling",
    "src/patents",
    "src/scripts",
    "src/tests",
    "src/tmp",
]

[tool.ruff.lint.isort]
known-first-party = ["semantic_ai_washing", "src"]
force-sort-within-sections = true
