[metadata]
name = semantic_ai_washing
version = 0.1.0
description = AI-washing transformation pipeline for 10-K filings
long_description = file: README.md
long_description_content_type = text/markdown
author = Soheil Khodadadi
license = MIT
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    pandas>=2.1
    numpy>=1.26
    torch>=2.1
    sentence-transformers>=3.0.1
    spacy>=3.7,<3.8
    pysbd>=0.3.4
    sec-edgar-downloader>=5.0.3
    python-dotenv>=1.1.0
    wrds>=3.3.0
    psycopg2-binary>=2.9.0
    statsmodels>=0.14.1
    loguru>=0.7.3
    tqdm>=4.66
    typer>=0.15.4

[options.packages.find]
where = src
include =
    semantic_ai_washing*

[options.entry_points]
console_scripts =
    extract-ai = semantic_ai_washing.data.extract_ai_sentences:main
    classify-all = semantic_ai_washing.classification.classify_all_ai_sentences:main
    aggregate-classification-counts = semantic_ai_washing.aggregation.aggregate_classification_counts:main
